--- a/html_template.html
+++ b/html_template.html
@@ -11,27 +11,27 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 <script>
   function updateFirmware() {
-    fetch('/update')
-      .then(response => response.text())
-      .then(text => {
-		console.log(text)
-         if (text === 'Update successful. Device is rebooting...') 
-          Swal.fire({
-            icon: 'success',
-            title: 'Обновление прошивки',
-            text: 'Прошивка успешно обновлена. Устройство перезагружается...',
-            showConfirmButton: false,
-            timer: 3000
-          }).then(() => location.reload());
-        } else {
-          Swal.fire({
-            icon: 'error',
-            title: 'Ошибка обновления',
-            text: 'Произошла ошибка при обновлении прошивки: ' + text,
-          });
-        }
+fetch('/update')
+  .then(response => response.text())
+  .then(text => {
+    console.log(text); // Выводим полученный текст в консоль
+    if (text === 'Update successful. Device is rebooting...') {
+      Swal.fire({
+        icon: 'success',
+        title: 'Обновление прошивки',
+        text: 'Прошивка успешно обновлена. Устройство перезагружается...',
+        showConfirmButton: false,
+        timer: 3000
+      }).then(() => location.reload());
+    } else {
+      Swal.fire({
+        icon: 'error',
+        title: 'Ошибка обновления',
+        text: 'Произошла ошибка при обновлении прошивки: ' + text,
       });
-  }
+    }
+  });
+
     fetch('/version')
       .then(response => response.tex
 t())
