--- a/html_template.html
+++ b/html_template.html
@@ -34,7 +34,7 @@
                             title: 'Ошибка обновления',
                             text: 'Произошла ошибка при обновлении прошивки: ' + errorMessage,
                         });
-                     } else if (text === 'Update successful.') {
+                     } else {
                         Swal.fire({
                             icon: 'info',
                             title: 'Обновление началось',
