--- a/html_template.html
+++ b/html_template.html
@@ -13,11 +13,10 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <script>
         function updateFirmware() {
-            const loader = document.getElementById('loader'); // получаем элемент индикатора загрузки
-            loader.style.display = 'block'; // отображаем индикатор загрузки
+            $('body').append('<div class="loading-indicator"></div>');
             fetch('/update')
                 .then(response => {
-                    loader.style.display = 'none';
+                    $('.loading-indicator').remove();
                     if (!response.ok) {
                         throw new Error('Network response was not ok');
                     }
@@ -40,7 +39,6 @@
                     }
                 })
                 .catch(error => {
-                    loader.style.display = 'none';
                     Swal.fire({
                         icon: 'info',
                         title: 'Обновление началось',
