--- a/html_template.html
+++ b/html_template.html
@@ -13,10 +13,13 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <script>
         function updateFirmware() {
-            $('body').append('<div class="loading-indicator"></div>');
             fetch('/update')
-                .then(response => {
-                    $('.loading-indicator').remove();
+            Swal.fire({
+                icon: 'info',
+                title: 'Подождите',
+                text: 'Попытка установить прошивку'
+            });
+            .then(response => {
                     if (!response.ok) {
                         throw new Error('Network response was not ok');
                     }
@@ -39,32 +42,34 @@
                     }
                 })
                 .catch(error => {
-                    Swal.fire({
-                        icon: 'info',
-                        title: 'Обновление началось',
-                        text: 'Процесс обновления начался. Пожалуйста, подождите...',
-                        showConfirmButton: false,
-                    });
-                });
-        }
-
-        fetch('/version')
-            .then(response => response.text())
-            .then(version => {
-                if (version) {
-                    document.getElementById('updateButton').innerText = 'Обновить до версии: ' + version;
-                    document.getElementById('updateButton').disabled = false;
-                    document.getElementById('updateButton').onclick = updateFirmware;
-                } else {
-                    document.getElementById('updateButton').innerText = 'Нет новой версии';
-                    document.getElementById('updateButton').disabled = true;
+                        Swal.fire({
+                                icon: 'info',
+                                title: 'Обновление началось',
+                                text: 'Процесс обновления начался. Пожалуйста, подождите...',
+                                showConfirmButton: false,
+                                onBeforeOpen: () => {
+                                    Swal.showLoading();
+                                });
+                        });
                 }
-            })
-            .catch(error => {
-                console.error(error);
-                document.getElementById('updateButton').innerText = 'Ошибка загрузки версии';
-                document.getElementById('updateButton').disabled = true;
-            });
+
+            fetch('/version')
+                .then(response => response.text())
+                .then(version => {
+                    if (version) {
+                        document.getElementById('updateButton').innerText = 'Обновить до версии: ' + version;
+                        document.getElementById('updateButton').disabled = false;
+                        document.getElementById('updateButton').onclick = updateFirmware;
+                    } else {
+                        document.getElementById('updateButton').innerText = 'Нет новой версии';
+                        document.getElementById('updateButton').disabled = true;
+                    }
+                })
+                .catch(error => {
+                    console.error(error);
+                    document.getElementById('updateButton').innerText = 'Ошибка загрузки версии';
+                    document.getElementById('updateButton').disabled = true;
+                });
     </script>
 </body>
 
